<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MH4U Database</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Database</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="about_message">MH4U Database v1.08
                                \n\n
                                Contribute at:\n
                                https://github.com/kamegami13/MonsterHunter4UDatabase
                                \n\n
                                Based on data from:\n
                                Ping\'s Dex\n
                                monsterhunter.wikia.com\n
                                kiranico.com\n
                                wiki.mh4g.org\n
                                aegil.net
                                \n\n
                                A Special Thanks to:\n
                                Kiranico\n
                                Kogath at Monster Hunter Wikia\n
                                kaiiboraka\n
                                Ping\n
                                Aegil
        						</string>
    <string name="alert_button">Close</string>
    <string name="alert_rate">Rate!</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="submit">Submit</string>

    <string name="placeholder_unknown">Unknown</string>
    <string name="filter_final_option">Final Only</string>

    <string name="dialog_message_delete">\"%s\" will be deleted.</string>
    <string name="dialog_message_delete_multi">These %d items will be deleted.</string>
    <string name="dialog_message_copy">\"%s\" will be duplicated.</string>
    <string name="dialog_message_copy_multi">These %d items will be duplicated.</string>

    <!-- CONFIRM EXIT -->
    <string name="exit_title">Abandon Quest</string>
    <string name="exit_dialog">Stop the Quest and return to town?</string>
    <string name="exit_confirm">Yes</string>
    <string name="exit_cancel">No</string>

    <!-- CHANGELOG DIALOG -->
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">More…</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="logo_description">Logo</string>
    <string-array name="drawer_items">
        <item>"Monsters,icons_items/Book-White.png"</item>
        <item>"Weapons,icons_weapons/icons_sword_and_shield/sword_and_shield1.png"</item>
        <item>"Armor,icons_armor/icons_body/body1.png"</item>
        <item>"Quests,icons_items/Quest-Icon-White.png"</item>
        <item>"Items,icons_items/Ore-White.png"</item>
        <item>"Combining,icons_items/Liquid-White.png"</item>
        <item>"Locations,icons_items/Map-Icon-White.png"</item>
        <item>"Decorations,icons_items/Jewel-White.png"</item>
        <item>"Skills,icons_items/Monster-Jewel-White.png"</item>
        <item>"Wishlists,icons_items/Mantle-White.png"</item>
        <item>"Wyporium Trade,icons_items/Carapace-White.png"</item>
        <item>"Armor Set Builder,icons_items/Talisman-White.png"</item>
    </string-array>

    <string name="option_list">List</string>
    <string name="option_grid">Grid</string>
    <string name="option_wishlist_add">Create Wishlist</string>
    <string name="option_wishlist_delete">Delete wishlist</string>
    <string name="option_wishlist_copy">Copy wishlist</string>
    <string name="option_wishlist_rename">Rename wishlist</string>
    <string name="option_wishlist_edit">Edit wishlist</string>
    <string name="option_wishlist_data_add">Create new wishlist</string>
    <string name="option_wishlist_data_edit">Edit quantity</string>
    <string name="option_wishlist_data_delete">Delete from wishlist</string>
    <string name="search_title">Search item</string>
    <string name="monsters">Monsters</string>
    <string name="items">Items</string>
    <string name="locations">Locations</string>
    <string name="combining">Combining</string>
    <string name="quests">Quests</string>
    <string name="hunting_fleet">Hunting Fleet</string>
    <string name="skill_trees">Skills</string>
    <string name="decorations">Decorations</string>
    <string name="armor">Armor</string>
    <string name="monster_image">monster_image</string>
    <string name="monster_damage">monster_damage</string>
    <string name="weapons">Weapons</string>
    <string name="arena_quests">Arena Quests</string>
    <string name="wishlist">Wishlists</string>
    <string name="wyporiumtrade">Wyporium Trade</string>
    <string name="icon_name">MH4U DB</string>

    <string name="dialog_armor_filter_title">Filter</string>
    <string name="armor_filter_label_rank">Rank</string>
    <string name="armor_filter_label_slots">Slots</string>

    <!--
    Unicode Black Circle \u25CF
    Unicode White Circle \u25CB
    Unicode Dash \u2015
    -->

    <string name="no_slots">―――</string>
    <string name="one_slot">○――</string>
    <string name="two_slots">○○―</string>
    <string name="three_slots">○○○</string>

    <string name="one_slot_jewel">●</string>
    <string name="two_slot_jewel">●●</string>
    <string name="three_slot_jewel">●●●</string>

    <string name="image_location_fire">icons_monster_info/Fire.png</string>
    <string name="image_location_water">icons_monster_info/Water.png</string>
    <string name="image_location_thunder">icons_monster_info/Thunder.png</string>
    <string name="image_location_ice">icons_monster_info/Ice.png</string>
    <string name="image_location_dragon">icons_monster_info/Dragon.png</string>
    <string name="image_location_poison">icons_monster_info/Poison.png</string>
    <string name="image_location_paralysis">icons_monster_info/Paralysis.png</string>
    <string name="image_location_sleep">icons_monster_info/Sleep.png</string>
    <string name="image_location_pitfall_trap">icons_items/Trap-Green.png</string>
    <string name="image_location_shock_trap">icons_items/Trap-Purple.png</string>
    <string name="image_location_flash_bomb">icons_items/Bomb-Yellow.png</string>
    <string name="image_location_sonic_bomb">icons_items/Bomb-Grey.png</string>
    <string name="image_location_dung_bomb">icons_items/Dung.png</string>
    <string name="image_location_meat">icons_items/Meat-White.png</string>
    <string name="image_location_effectiveness_1">icons_monster_info/effectiveness-1.png</string>
    <string name="image_location_effectiveness_2">icons_monster_info/effectiveness-2.png</string>
    <string name="image_location_effectiveness_3">icons_monster_info/effectiveness-3.png</string>

    <!-- ASB List stuff -->

    <string name="activity_asb_sets">Armor Sets</string>

    <string name="dialog_title_add_asb_set">New Set</string>
    <string name="dialog_title_edit_asb_set">Edit Set</string>

    <string name="context_action_asb_delete">Delete</string>
    <string name="context_action_asb_edit_data">Edit Data</string>
    <string name="context_action_asb_copy">Copy</string>

    <!-- Armor Set Builder Stuff !-->

    <string name="activity_asb">Armor Set Builder</string>

    <string name="asb_empty_slot">Empty slot</string>
    <string name="asb_no_slot">No slot</string>
    <string name="asb_action_select">Select</string>

    <string name="asb_action_add">Add</string>
    <string name="asb_action_remove">Remove</string>
    <string name="asb_action_edit">Edit</string>
    <string name="asb_action_edit_piece_decorations">Decorations</string>
    <string name="asb_action_armor_piece">Info</string>

    <string name="asb_action_add_decoration">Add</string>
    <string name="asb_action_remove_decoration">Remove</string>
    <string name="asb_action_get_decoration_info">Info</string>

    <string name="asb_option_set_add">New set</string>

    <string name="asb_dialog_talisman_title">Talisman</string>
    <string name="asb_talisman_skill_1">Skill 1</string>
    <string name="asb_talisman_skill_2">Skill 2</string>

    <string name="asb_helmet">Helmet</string>
    <string name="asb_body">Body</string>
    <string name="asb_arms">Arms</string>
    <string name="asb_waist">Waist</string>
    <string name="asb_legs">Legs</string>
    <string name="asb_skill_tree_name">Skill</string>
    <string name="asb_skill_points_total">Total</string>

    <string name="asb_dialog_title_delete_set">Delete this set?</string>
    <string name="asb_dialog_title_delete_set_multi">Delete sets?</string>
    <string name="asb_dialog_title_copy_set">Copy this set?</string>
    <string name="asb_dialog_title_copy_set_multi">Copy sets?</string>

    <string-array name="talisman_names">
        <item>Pawn,Talisman-White.png</item>
        <item>Bishop,Talisman-Purple.png</item>
        <item>Knight,Talisman-Yellow.png</item>
        <item>Rook,Talisman-Pink.png</item>
        <item>Queen,Talisman-Green.png</item>
        <item>King,Talisman-Cyan.png</item>
        <item>Dragon,Talisman-Red.png</item>
        <item>Unknowable,Talisman-Blue.png</item>
        <item>Mystic,Talisman-Orange.png</item>
        <item>Hero,Talisman-Blue.png</item>
        <item>Legend,Talisman-Orange.png</item>
        <item>Creator,Talisman-Magenta.png</item>
        <item>Sage,Talisman-Magenta.png</item>
        <item>Miracle,Talisman-Magenta.png</item>
    </string-array>

    <string-array name="slot_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="filter_restriction">
        <item>Minimum</item>
        <item>Exactly</item>
        <item>Maximum</item>
    </string-array>

    <string-array name="rank">
        <item>Low</item>
        <item>High</item>
        <item>G</item>
    </string-array>

    <string-array name="hunter_type">
        <item>Blademaster</item>
        <item>Gunner</item>
    </string-array>
</resources>