<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_menu_layout" >

    <!-- main menu contents !-->
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:src="@drawable/mh4u_logo"
                android:contentDescription="@string/app_name"
                android:paddingTop="5dp" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/monsters"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:background="@drawable/weapon_clicked_states"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:text="@string/monsters"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/weapons"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:background="@drawable/weapon_clicked_states"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:text="@string/weapons"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/armors"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="@drawable/weapon_clicked_states"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/armor"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/quests"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="@drawable/weapon_clicked_states"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/quests"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/items"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="@drawable/weapon_clicked_states"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/items"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/combining"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="@drawable/weapon_clicked_states"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/combining"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/decorations"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="@drawable/weapon_clicked_states"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/decorations"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/skilltrees"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="@drawable/weapon_clicked_states"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/skill_trees"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/locations"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="@drawable/weapon_clicked_states"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/locations"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/hunting_fleet"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="@drawable/weapon_clicked_states"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/hunting_fleet"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/arena_quests"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="@drawable/weapon_clicked_states"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/arena_quests"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/wishlists"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="@drawable/weapon_clicked_states"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/wishlist"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <!-- navigation drawer !-->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>

</android.support.v4.widget.DrawerLayout>